<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:focusable="true"
    android:clickable="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/pb_progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="visible"
        android:indeterminate="true"
        />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:maxLines="1"
        android:textStyle="bold"
        android:textColor="@color/grey"
        android:textSize="@dimen/character_detail_name_size"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="4dp"
        android:background="@color/grey"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <WebView
        android:id="@+id/wv_image"
        android:layout_width="200dp"
        android:layout_height="160dp"
        android:layout_marginTop="4dp"

        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ScrollView
        android:id="@+id/sv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/wv_image">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_description_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/character_description_header"/>

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_comics_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/character_comics_header"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_comics_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"/>

            <TextView
                android:id="@+id/tv_series_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/character_series_header"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_series_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"/>

            <TextView
                android:id="@+id/tv_stories_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/character_stories_header"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_stories_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"/>

            <TextView
                android:id="@+id/tv_events_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/character_events_header"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_events_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>